
syntax = "proto3";

package proto;

service MidService {
    rpc Sync(NetReqInfo)  returns (NetRspInfo) {};
    rpc Async(NetReqInfo) returns (NetRspInfo) {};
}

service ClientService{
    rpc Call(NetReqInfo)   returns (NetRspInfo) {};
}

message NetReqInfo
{
    bytes   m_Body = 1;     ///请求rpc bytes
}
message NetRspInfo
{
    bytes   m_Resp = 1;
}

message ClientRsqInfo {
    bytes   m_Resp = 1;
    uint32  m_Type = 2;
    string  m_RqId = 3;
}
/// go get -u github.com/golang/protobuf/tree/master/protoc-gen-go
/// protoc --go_out=plugins=grpc:. proto/wallet.proto